fixing minor things on footer spacing

--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -61,7 +61,7 @@ $link-invert: $primary-invert;
 $link-focus-border: $primary;
 
 // Layout Stuff
-$footer-padding: 1.5rem;
+$footer-padding: 1rem;
 $navbar-height: 3.25rem;
 
 // Import Bulma and Buefy styles
